# rag-etl-starter

./: .gitignore  CLAUDE.md  package.json  turbo.json
apps/chat-ui/: .env.example  README.md  TODO.md  docker-compose.yml  librechat.yaml  mcp-config.json  package.json
apps/neo4j/: package.json
apps/prefect-etl/: .env.example  Makefile  package.json  pyproject.toml
apps/prefect-etl/src/flows/: wikipedia_flow.py
